syntax = "proto3";

package tournament;

service TournamentService {
  rpc CreateTournament (CreateTournamentRequest) returns (CreateTournamentResponse);
  rpc GetTournament (GetTournamentRequest) returns (GetTournamentResponse);
  rpc UpdateTournament (UpdateTournamentRequest) returns (UpdateTournamentResponse);
  rpc DeleteTournament (DeleteTournamentRequest) returns (DeleteTournamentResponse);
  rpc ListTournaments (ListTournamentsRequest) returns (ListTournamentsResponse);
}

message CreateTournamentRequest {
  string name = 1;
  string description = 2;
  string start_date = 3; // Date in ISO format
  string end_date = 4; // Date in ISO format
  bool is_open = 5;
  string club_id = 6; // Reference to Club
}

message CreateTournamentResponse {
  string message = 1;
  Tournament tournament = 2;
}

message GetTournamentRequest {
  string id = 1;
}

message GetTournamentResponse {
  Tournament tournament = 1;
}

message UpdateTournamentRequest {
  string id = 1;
  string name = 2;
  string description = 3;
  string start_date = 4; // Date in ISO format
  string end_date = 5; // Date in ISO format
  bool is_open = 6;
  string club_id = 7;
}

message UpdateTournamentResponse {
  string message = 1;
  Tournament tournament = 2;
}

message DeleteTournamentRequest {
  string id = 1;
}

message DeleteTournamentResponse {
  string message = 1;
}

message ListTournamentsRequest {}

message ListTournamentsResponse {
  repeated Tournament tournaments = 1;
}

message Tournament {
  string id = 1;
  string name = 2;
  string description = 3;
  string start_date = 4; // Date in ISO format
  string end_date = 5; // Date in ISO format
  bool is_open = 6;
  Club club = 7;
}

message Club {
  string id = 1;
  string name = 2;
}
